--- a/src/app/component/prestations/prestations.component.css
+++ b/src/app/component/prestations/prestations.component.css
@@ -27,12 +27,9 @@ tr:nth-child(even).StatutS td { background-color : rgba(220,200,200,0.5); }
 .coldate {  background-color: #d0e0d0;  width: 135px; }
 .colliste { background-color: #d0e0d0;}
 
-.coldate input {
-    padding-left:2px; padding-right:1px;
-}
+.coldate input { padding-left:2px; padding-right:1px; }
 
 
-div.myFieldset .ui-fieldset .ui-fieldset-legend {
-    background-color:rgba(180,200,200,1);
-}
+div.myFieldset .ui-fieldset .ui-fieldset-legend { background-color:rgba(180,200,200,1); }
 
+.obligatoire { border-bottom: #7799aa solid 1px; }
